# cstr

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  bwt.c  bwt.h  bwt_test.c  cmake_install.cmake  misc.c  misc.h  skew.c  skew.h  skew_test.c  test.fa
Modules/: GroupFiles.cmake
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  alphabet.c  bit_vector.c  bwt.c  bwt.h  bwt_internal.h  cmake_install.cmake  config.h  config.h.in  cstr  cstr.c  cstr.h  cstr_internal.h  exact.c  li_durbin.c  refcount.c  sais.c  skew.c  suffix_array.c  suffix_tree.c  unittests.h
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  alphabet_test  alphabet_test.c  bit_vector_test.c  bwt_test  bwt_test.c  cmake_install.cmake  cstr_test  cstr_test.c  exact_test  exact_test.c  li_durbin_test.c  refcount_test.c  sa_test  sa_test.c  sais_test.c  skew_test  skew_test.c  suffix_tree_test.c  testlib.c  testlib.h
tools/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  exact  exact.c  fasta.c  fasta.h  fastq.c  fastq.h  genome-100-10.fa  genome-100-10.fa-reads-10-10-0.fq  sam.c  sam.h
